Real Data Fixes Account details - fix provider logo size Account Details Settings - Top content wrap size

--- a/src/assets/css/account/_account.scss
+++ b/src/assets/css/account/_account.scss
@@ -7,7 +7,7 @@
     flex: 0.5;
     
     .providerLogo {
-      height: 48px;
+      max-width: 140px;
     }
 
     span {
