--- a/src/assets/css/networth/networth.scss
+++ b/src/assets/css/networth/networth.scss
@@ -698,6 +698,7 @@ a.upgrader-btn {
   color: $redAlert;
 }
 .dropdown-box {
+  padding-top: 10px;
   padding-bottom: 10px;
   max-height: 520px;
   overflow-y: auto;
